--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,5 +2,5 @@ FROM rbergm/postbound-sigmod25:latest
 
 WORKDIR /sigmod25
 RUN git clone https://github.com/db-tu-dresden/SIGMOD25-OptimizerTutorial.git /sigmod25 && \
-    cp /sigmod25/.psycopg_connection_stats.sample /sigmod25/.psycopg_connection
-CMD ["/postbound/tools/docker-entrypoint.sh"]
+    cp /sigmod25/.psycopg_connection_stats.sample /sigmod25/.psycopg_connection && \
+    pip install sentence-transformers scikit-learn
