--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,4 @@
-FROM rbergm/postbound-sigmod25:latest
+FROM rbergm/sigmod25-tutorial:latest
 
 WORKDIR /sigmod25
-RUN git clone https://github.com/db-tu-dresden/SIGMOD25-OptimizerTutorial.git /sigmod25 && \
-    cp /sigmod25/.psycopg_connection_stats.sample /sigmod25/.psycopg_connection && \
-    . /postbound/pb-venv/bin/activate && \
-    pip install sentence-transformers scikit-learn
+CMD ["/postbound/tools/docker-entrypoint.sh"]
